asp.net core 2.2 upgrade

--- a/src/AppMetrics.StatusPage/appsettings.json
+++ b/src/AppMetrics.StatusPage/appsettings.json
@@ -10,6 +10,7 @@
   //"AppMetricsChecks": {
   //}
   // ,
-  //"UrlChecks": {
-  //}
+  "UrlChecks": {
+    "Google": "https://www.google.com"
+  }
 }
